# warbl

./: .gitignore  README.md
tests/: CMakeLists.txt  README.md  fingering_test.cpp  register_ctrl_test.cpp  warbl_mock.cpp  warbl_mock.h
warbl_firmware/: debug.cpp  debug.h  fingering.cpp  fingering.h  functions.ino  register_ctrl.cpp  register_ctrl.h  warbl.h  warbl_firmware.ino
